# cpuminer-multi-opencl

./: Makefile.am  README.md  cpu-miner.c  gpu.c  gpu.h  miner.h  reciprocal_div64.h  util.c  wild_keccak-alt.cl  wild_keccak.cl  wild_keccak_multi.cl
